@@ -5,6 +5,8 @@ Fixes:
  - Fixed ConcurrentModificationException in BeanModelTable.clear (MODELER-467)
  - Remove sensor "color" from list of sensor types (MODELER-472)
  - Grid does not accept Tabbar, Tabbar item or other grid anymore (MODELER-350)
+ - Fixed: Dragging a widget to or from grid would loose
+   its linked sensor or command (MODELER-363)
 
 New features:
  - Add regex and pollingInterval attributes to TCP/IP protocol (MODELER-448)
